--- a/Day 15/style.css
+++ b/Day 15/style.css
@@ -16,21 +16,31 @@ body {
 .search i {
     margin-right: 1rem;
 }
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
 nav {
     display: flex;
     justify-content: space-between;
     padding: 1rem 2rem;
-    position: fixed;
+    /* position: fixed; */
     background-color: black;
-    width: 100%;
-    z-index: 1;
+    /* width: 100%; */
+    /* margin-left: -150px; */
+}
+nav ul {
+    width: 40%; 
 }
 ul {
     display: flex;
     list-style-type: none;
-    column-gap: 1rem;
+    justify-content: space-between;
 }
 /* navbar ends  */
+
+
 
 /* main container starts  */
 .containter{
@@ -38,34 +48,73 @@ ul {
 }
 .sidebar {
      width: 20%;
-    /* background-color: red; */
     height: 100vh;
     position: sticky;
     top: 0;
 }
 .post {
     width: 60%;
-    /* background-color: yellow; */
     color: black;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 5rem;
 }
 .rightsidebar{
      width: 20%;
-    /* background-color: brown; */
     height: 100vh;
     position: sticky;
     top: 0;
 }
 
 .minipost {
-    background-color: gray;
+    background-color: #242526;
     padding: 10px;
     border-radius: 10px; 
     width: 400px;
+    color: rgb(216, 213, 213);
+    margin-top: 1rem;
 }
 .minipost img {
     width: 100%;
+}
+.profile{
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.profile img {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+} 
+
+.description {
+    margin-bottom: 1.5rem;
+}
+
+img[alt="post_image"] {
+    margin-top: 1.5rem;
+}
+.postline {
+    margin-top: 1rem;
+    border: 1px solid gray;
+}
+.reaction {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1rem;
+}
+.reaction1{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2rem;
+    margin-top: 1rem;
+}
+.reaction i {
+    margin-right: 8px;
 }
 
 /* main container ends  */
