--- a/Day 15/style.css
+++ b/Day 15/style.css
@@ -39,11 +39,9 @@ ul {
     justify-content: space-between;
 }
 /* navbar ends  */
-
-
-
+ 
 /* main container starts  */
-.containter{
+main{
     display: flex;
 }
 .sidebar {
@@ -51,7 +49,30 @@ ul {
     height: 100vh;
     position: sticky;
     top: 0;
+    line-height: 2.5rem;
+    padding-left: 2rem;
 }
+.left_profile, .contact {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+.left_profile:hover, .contact:hover { 
+    background-color: rgb(60, 53, 53);
+    border-radius: 1rem;
+    padding-left: 1rem;
+}
+.left_profile i {
+    margin-left: 5px;
+    font-size: 12px;
+
+}
+.left_profile img, .contact img{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+}
+
 .post {
     width: 60%;
     color: black;
@@ -120,3 +141,9 @@ img[alt="post_image"] {
 /* main container ends  */
 
 
+
+/* right sidebar starts  */
+.rightsidebar {
+    line-height: 2.5rem;
+}
+/* right sidebar ends  */
